--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,12 @@
                   android:label="@string/app_name">
             </activity>
 
+        <activity android:name=".moveImage"
+            android:label="@string/app_name">
+
+
+        </activity>
+
 
     </application>
 
